--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.56MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35129, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.70MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-794.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.92MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2, server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
