--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.56MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35129, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.92MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-335.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-481.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-5.11MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-495.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
