--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-335.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-481.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇬🇧 英国-5.11MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-495.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-184.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
