--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-443.0KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-184.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-158.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-857.7KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
